[package]
name = "preferences-serde1"
version = "2.0.0"
authors = ["Andy Barron <AndrewLBarron@gmail.com>"]
maintainers = ["Andrew Straw <strawman@astraw.com>"]

description = "Read and write user-specific application data"
repository = "https://github.com/astraw/preferences-serde1"
keywords = ["preferences", "user", "data", "persistent", "storage"]
license = "MIT"

[dependencies]
directories = "4.0.1"
serde = "^1.0.0"
serde_json = "^1.0.0"

[dev-dependencies]
serde_derive = "^1.0.0"
